--- a/api/pom.xml
+++ b/api/pom.xml
@@ -219,8 +219,8 @@
         </dependency>
         <dependency>
             <groupId>com.bucket4j</groupId>
-            <artifactId>bucket4j-core</artifactId>
-            <version>8.7.0</version>
+            <artifactId>bucket4j_jdk8-core</artifactId>
+            <version>8.2.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
